# MulTee

./: .gitignore  .gitmodules  Makefile  README.md  conveyance-self-test.bats
common/: Cargo.toml
common/src/: api.rs  constants.rs  error.rs  lib.rs  percent.rs
docs/: arch-covm.puml  arch-sgx.puml  nginx.puml  triple-a-flow.puml
images/multee-build/: Dockerfile
images/pkcs11/: 10-multee.conf  Dockerfile  multee.env  nginx.conf
images/pykmip/: Dockerfile
images/pykmip/overlay/: perform.sh
images/pykmip/overlay/etc/pykmip/: policy.json  pykmip.conf  server-extfile.cnf  server.conf
kmip/: Cargo.toml
kmip/src/: constants.rs  error.rs  kmip.rs  lib.rs  ttlv.rs  util.rs
mbedtls-sys/: Cargo.toml  build.rs  multee_config.h  threading_alt.h  wrapper.h
mbedtls-sys/src/: lib.rs
multee-cgo/: Cargo.toml  build.rs
multee-cgo/src/: cgo_ffi.rs  lib.rs
multee-core/: Cargo.toml
multee-core/src/: api.rs  csr.rs  http_util.rs  import_keys.rs  kmip_client.rs  lib.rs  mtls.rs  tls.rs  triple_a_client.rs
multee-golang/: api.go  const.go  err.go  go.mod  multee.go  multee.h  multee_cgo.go
multee-java/: build.sbt  repositories
multee-java/src/main/java/cc/multee/: Algorithm.java  AssociatedData.java  AsymmEncryptionKey.java  AsymmetricKey.java  Const.java  Errors.java  HMACKey.java  IV.java  Key.java  KeyFactory.java  KeyHandle.java  MAC.java  MulTee.java  MulTeeError.java  MulTeeException.java  PublicKey.java  Signature.java  SigningKey.java  SymmetricKey.java  Tag.java  WrappedBytes.java
multee-java/src/main/java/cc/multee/impl/: MulTeeErrorImpl.java  MulTeeImpl.java  MulTeeKeyImpl.java  Native.java  Util.java
multee-jni/: Cargo.toml  build.rs
multee-jni/src/: jni.rs
multee-lib/: Cargo.toml  build.rs
multee-lib/.cargo/: config
multee-lib/src/: api.rs  credentials.rs  err.rs  lib.rs  literal.rs  remote_kmip.rs  util.rs  yaml.rs
multee-pkcs11/: Cargo.toml
multee-pkcs11/src/: api.rs  lib.rs
multee-server/: Cargo.toml
multee-server/src/: kmip.rs  main.rs  srv.rs
sample/golang/: go.mod  main.go
sample/java/: pom.xml
sample/java/src/main/java/cc/multee/sample/: Main.java
sgx-enclave-builder/: Cargo.toml
sgx-enclave-builder/src/: lib.rs
test-data/: .gitignore  gen-literals.sh  make-multee-server-cert.sh  make-tofu-grant.sh  make-triple-a-identity.sh  provision-triple-a-secrets.sh
triple-a-service/: build.sbt
triple-a-service/src/main/resources/: application.conf
triple-a-service/src/main/scala/cc/multee/triplea/: APIServer.scala  App.scala  Attestation.scala  CSRSigner.scala  DCAPVerifier.scala  Nonce.scala  Policy.scala  QuoteParserIntelDCAP.scala  ReportParserAMDSEVSNP.scala  SEVSNPVerifier.scala  Util.scala  Verifier.scala
trusted-sgx/: .gitignore  Cargo.toml  build.rs
trusted-sgx/.cargo/: config
trusted-sgx/resources/: multee-config.xml  multee-signing-cert.pem  multee.edl  multee.lds
trusted-sgx/src/: api.rs  attestation.rs  lib.rs  mutex.rs
untrusted-sgx/: Cargo.toml  build.rs
untrusted-sgx/.cargo/: config
untrusted-sgx/resources/: sgx_quote3_t  sgx_target_info_t
untrusted-sgx/src/: api.rs  attestation.rs  lib.rs  util.rs
