[package]
name = "kmip"
version = "0.7.0"
authors = [
    "Authors <authors@multee.cc>",
    "gwlwZ4NLuNe0tEjOVIec7H/KUa8DBHvUQSuodN3pB7Y="
]
edition = "2021"

[lib]
doctest = false

[dependencies]
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
#num_enum = "=0.7.0"
scroll = { version = "0.10", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive","alloc"] }
postcard = {  version = "=1.0.10", default-features = false, features = ["alloc"] }
log = "0.4.22"
