[package]
name = "multee-jni"
version = "0.7.0"
authors = [
    "Authors <authors@multee.cc>",
    "gwlwZ4NLuNe0tEjOVIec7H/KUa8DBHvUQSuodN3pB7Y="
]
edition = "2018"

[lib]
crate-type = ["dylib"]

[build-dependencies]
common = { path = "../common" }

[dependencies]
multee-lib = { path = "../multee-lib" }
multee-core = { path = "../multee-core" }
common = { path = "../common" }
kmip = { path = "../kmip" }
lazycell = { version = "=1.3.0" }
jni = { version = "=0.20.0" }

