[package]
name = "multee-lib"
version = "0.7.0"
authors = [
    "Authors <authors@multee.cc>",
    "gwlwZ4NLuNe0tEjOVIec7H/KUa8DBHvUQSuodN3pB7Y="
]
edition = "2021"

#[lib]
#crate-type = ["dylib","staticlib"]

[dependencies]
common = { path = "../common" }
multee-core = { path = "../multee-core" }
kmip = { path = "../kmip" }

dlopen = "=0.1.8"
dlopen_derive = "=0.1.4"

raw-cpuid = "=10.7.0"
either = { version = "1.13.0", default-features = false }
lazycell = "=1.3.0"
const_format = "=0.2.30"
log = "=0.4.22"
env_logger = "=0.10.0"
chrono = "=0.4.23"
http = "0.1"
yaml-rust2 = "=0.9.0"
hex = { version = "0.4", default-features = false }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
gethostname = "0.2"

rustls = { version = "=0.17.0", features = ["dangerous_configuration"] }

#sev-snp-utilities = { version = "1.5.1", optional = true }
sev = { version = "4.0.0", default-features = false, features = ["snp","crypto_nossl"], optional = true }

[features]
default = ["with-sevsnp","with-dcap"]
#default = ["with-dcap"]
with-intel-tdx = []
with-dcap = []
with-sevsnp = ["sev"]
with-deleteme = []
#with-sevsnp = ["sev-snp-utilities"]