[package]
name = "multee-pkcs11"
version = "0.7.0"
authors = [
    "Authors <authors@multee.cc>",
    "gwlwZ4NLuNe0tEjOVIec7H/KUa8DBHvUQSuodN3pB7Y="
]
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
multee-lib = { path = "../multee-lib" }
multee-core = { path = "../multee-core" }
common = { path = "../common" }
kmip = { path = "../kmip" }
log = "=0.4.22"
cryptoki = "=0.4.1"
pkcs11 = "0.5.0"
dotenvy = "=0.15.7"
once_cell = "=1.20.2"

