[package]
name = "untrusted-sgx"
version = "0.7.0"
authors = [
    "Authors <authors@multee.cc>",
    "gwlwZ4NLuNe0tEjOVIec7H/KUa8DBHvUQSuodN3pB7Y="
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
enclave-builder = { path = "../sgx-enclave-builder" }

[dependencies]
common = { path = "../common" }

sgx_types = { path = "../deps/incubator-teaclave-sgx-sdk/sgx_types", features = ["sim"] }
sgx_urts = { path = "../deps/incubator-teaclave-sgx-sdk/sgx_urts", features = ["sim"] }
raw-cpuid = "=10.7.0"
#parking_lot = "0.9"
log = "=0.4.22"
env_logger = "=0.10.0"
either = { version = "1.13.0", default-features = false }

serde = { version = "1.0.215", default-features = false, features = ["derive","alloc"] }
postcard = { version = "=1.0.10", default-features = false, features = ["alloc"] }

kmip = {path = "../kmip"}

[features]
default = []
prod-signing = []
